# code-inference

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  pyproject.toml
.github/workflows/: tests.yml
demo_inference/: app.py  schema.py
tests/: test_app.py
tests/test_data/: requests.json
